--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	"dependencies": {
 		"@astrojs/prefetch": "^0.1.1",
 		"@astrojs/vercel": "^2.4.0",
+		"astro-icon": "^0.8.0",
 		"sharp": "^0.31.2"
 	}
 }
